--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=7000
-MONGO_URI=mongodb+srv://bhoopendravishnoi:UPK9RDC2MjBlWzM0@cluster0.ot5dcik.mongodb.net/mydb1?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://bhoopendra:<Password>b.net/mydb1?retryWrites=true&w=majorityxls&appName=fine
 
